--- a/joblisting-backend/src/main/resources/application.properties
+++ b/joblisting-backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=joblisting-backend
+
+spring.data.mongodb.uri=mongodb+srv://kabin:2078@cluster0.2i9akhw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+spring.data.mongodb.database=kabin
